// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with calculate as different and default format' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "Difference",
      "value": "-78314703.09",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with custom format' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with custom label' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "Custom label",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with decimal-1 format' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "#,##0.0",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with default config with secondary measure is PoP' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_e40a8329_m_acugFHNJgsBy_closed.year",
      "title": "Won Last Year",
      "value": "38310753.45",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "#,##0%",
      "localIdentifier": "m_57cc3b016ec6bb98b08ffeea6b0e4174",
      "title": "Change",
      "value": "0",
    },
    "evaluationType": "equals",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with default config' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "#,##0%",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with drilling on 2 measures' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": true,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": true,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "#,##0%",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with equals arrow and color' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "custom_amount_local_id",
      "title": "Custom Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_a9d9033bf0641d5430bcc7f339c8fb65",
      "title": "of",
      "value": "1",
    },
    "evaluationType": "equals",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with equals arrow' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "custom_amount_local_id",
      "title": "Custom Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_a9d9033bf0641d5430bcc7f339c8fb65",
      "title": "of",
      "value": "1",
    },
    "evaluationType": "equals",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with negative arrow and color' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      "title": "of",
      "value": "3.04419636883962",
    },
    "evaluationType": "negative",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with negative arrow' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_f72796b0fbc7c0dc4d17a1e68c1a9933",
      "title": "of",
      "value": "3.04419636883962",
    },
    "evaluationType": "negative",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with position on right' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with position on top' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with positive arrow and color' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;

exports[`ComparisonTransformationUtils > getComparisonBaseHeadlineData > should transform 'comparison with positive arrow' correctly 1`] = `
{
  "primaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_acugFHNJgsBy",
      "title": "Won",
      "value": "38310753.45",
    },
    "elementType": "primaryValue",
  },
  "secondaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "$#,##0.00",
      "isDrillable": false,
      "localIdentifier": "m_aangOxLSeztu",
      "title": "Amount",
      "value": "116625456.54",
    },
    "elementType": "secondaryValue",
  },
  "tertiaryItem": {
    "baseHeadlineDataItemComponent": [Function],
    "data": {
      "format": "[color=9c46b5][backgroundColor=d2ccde]$#,##0.00",
      "localIdentifier": "m_916f5387caf8737c37c4a2206c3471d2",
      "title": "of",
      "value": "0.328493920509201",
    },
    "evaluationType": "positive",
  },
}
`;
